--- a/irHub/Pages/ProgramListPage.xaml
+++ b/irHub/Pages/ProgramListPage.xaml
@@ -1,7 +1,7 @@
 ﻿<Page
-    Height="450"
+    HorizontalAlignment="Stretch"
     Title="ProgramListPage"
-    Width="800"
+    VerticalAlignment="Stretch"
     mc:Ignorable="d"
     x:Class="irHub.Pages.ProgramListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -10,88 +10,86 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
-        <ScrollViewer>
-            <hc:FlexPanel
-                AlignContent="SpaceAround"
-                FlexWrap="Wrap"
-                JustifyContent="SpaceAround"
-                Name="ProgramsCardPanel">
-                <!--<hc:Card
-                    Background="LightGray"
-                    BorderThickness="0"
-                    Effect="{DynamicResource EffectShadow2}"
-                    Height="110"
-                    Margin="5"
-                    Width="250">
-                    <hc:Card.Header>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="75" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Image
-                                Grid.Column="0"
-                                Height="60"
-                                HorizontalAlignment="Left"
-                                Margin="5,5,0,5"
-                                Source="pack://application:,,,/irHub;component/Resources/logo.png"
-                                VerticalAlignment="Center" />
-                            <TextBlock
-                                FontSize="15"
-                                Grid.Column="1"
-                                HorizontalAlignment="Left"
-                                Margin="5,0,0,0"
-                                Text="CrewChief"
-                                VerticalAlignment="Center" />
-                        </Grid>
-                    </hc:Card.Header>
-                    <hc:Card.Footer>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
+    <hc:ScrollViewer HorizontalContentAlignment="Left">
+        <hc:FlexPanel
+            AlignContent="SpaceAround"
+            FlexWrap="Wrap"
+            JustifyContent="SpaceAround"
+            Name="ProgramsCardPanel">
+            <!--<hc:Card
+                Background="LightGray"
+                BorderThickness="0"
+                Effect="{DynamicResource EffectShadow2}"
+                Height="110"
+                Margin="5"
+                Width="250">
+                <hc:Card.Header>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Image
+                            Grid.Column="0"
+                            Height="60"
+                            HorizontalAlignment="Left"
+                            Margin="5,5,0,5"
+                            Source="pack://application:,,,/irHub;component/Resources/logo.png"
+                            VerticalAlignment="Center" />
+                        <TextBlock
+                            FontSize="15"
+                            Grid.Column="1"
+                            HorizontalAlignment="Left"
+                            Margin="5,0,0,0"
+                            Text="CrewChief"
+                            VerticalAlignment="Center" />
+                    </Grid>
+                </hc:Card.Header>
+                <hc:Card.Footer>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
-                            <Button
-                                Background="LightGray"
-                                BorderThickness="0"
-                                Content="START"
-                                FontSize="18"
-                                FontWeight="SemiBold"
-                                Grid.Column="0"
-                                Height="35"
-                                MouseEnter="ActionButton_OnMouseEnter"
-                                MouseLeave="ActionButton_OnMouseLeave"
+                        <Button
+                            Background="LightGray"
+                            BorderThickness="0"
+                            Content="START"
+                            FontSize="18"
+                            FontWeight="SemiBold"
+                            Grid.Column="0"
+                            Height="35"
+                            MouseEnter="ActionButton_OnMouseEnter"
+                            MouseLeave="ActionButton_OnMouseLeave"
+                            VerticalAlignment="Center"
+                            Width="200"
+                            hc:BorderElement.CornerRadius="8" />
+                        <Button
+                            Background="LightGray"
+                            BorderThickness="0"
+                            Grid.Column="1"
+                            Height="35"
+                            HorizontalAlignment="Right"
+                            Margin="0,0,0,6"
+                            MouseEnter="EditButton_OnMouseEnter"
+                            MouseLeave="EditButton_OnMouseLeave"
+                            VerticalAlignment="Center"
+                            Width="40"
+                            hc:BorderElement.CornerRadius="8">
+                            <materialDesign:PackIcon
+                                Foreground="Black"
+                                Height="25"
+                                Kind="Pencil"
                                 VerticalAlignment="Center"
-                                Width="200"
-                                hc:BorderElement.CornerRadius="8" />
-                            <Button
-                                Background="LightGray"
-                                BorderThickness="0"
-                                Grid.Column="1"
-                                Height="35"
-                                HorizontalAlignment="Right"
-                                Margin="0,0,0,6"
-                                MouseEnter="EditButton_OnMouseEnter"
-                                MouseLeave="EditButton_OnMouseLeave"
-                                VerticalAlignment="Center"
-                                Width="40"
-                                hc:BorderElement.CornerRadius="8">
-                                <materialDesign:PackIcon
-                                    Foreground="Black"
-                                    Height="25"
-                                    Kind="Pencil"
-                                    VerticalAlignment="Center"
-                                    Width="40" />
-                            </Button>
-                        </Grid>
-                    </hc:Card.Footer>
-                </hc:Card>-->
-            </hc:FlexPanel>
-        </ScrollViewer>
-    </Grid>
+                                Width="40" />
+                        </Button>
+                    </Grid>
+                </hc:Card.Footer>
+            </hc:Card>-->
+        </hc:FlexPanel>
+    </hc:ScrollViewer>
 </Page>
