Added continuous program state loop check

--- a/irHub/Windows/MainWindow.xaml
+++ b/irHub/Windows/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<hc:Window
     Closing="MainWindow_OnClosing"
     Height="550"
+    Loaded="MainWindow_OnLoaded"
     MinHeight="500"
     MinWidth="850"
     ResizeMode="CanResize"
