Made the app start up on the center of your screen no matter the dimensions

--- a/irHub/Windows/MainWindow.xaml
+++ b/irHub/Windows/MainWindow.xaml
@@ -8,6 +8,7 @@
     ShowMaxButton="False"
     Title="irHub"
     Width="900"
+    WindowStartupLocation="Manual"
     hc:WindowAttach.SystemBackdropType="Auto"
     mc:Ignorable="d"
     x:Class="irHub.Windows.MainWindow"
