Set program dialog to open at center of the mainwindow & QoL changes related to keyboard actions

--- a/irHub/Dialogs/ProgramDialog.xaml
+++ b/irHub/Dialogs/ProgramDialog.xaml
@@ -10,6 +10,7 @@
     ShowMinButton="False"
     ShowNonClientArea="False"
     Width="600"
+    WindowStartupLocation="CenterOwner"
     mc:Ignorable="d"
     x:Class="irHub.Dialogs.ProgramDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -56,6 +57,7 @@
                 Foreground="{DynamicResource SuccessBrush}"
                 Height="22"
                 HorizontalAlignment="Right"
+                IsDefault="True"
                 Margin="0,4,30,0"
                 Padding="0"
                 Style="{StaticResource ButtonIcon}"
@@ -67,6 +69,7 @@
                 Foreground="{DynamicResource WarningBrush}"
                 Height="22"
                 HorizontalAlignment="Right"
+                IsCancel="True"
                 Margin="0,4,4,0"
                 Padding="0"
                 Style="{StaticResource ButtonIcon}"
