Fixed an issue where modified startup arguments would not save if the focus was not changed before clicking the save button

--- a/irHub/Dialogs/ProgramDialog.xaml
+++ b/irHub/Dialogs/ProgramDialog.xaml
@@ -154,7 +154,7 @@
                             Grid.Row="0"
                             Height="20"
                             Margin="2"
-                            Text="{Binding StartArguments}" />
+                            Text="{Binding StartArguments, UpdateSourceTrigger=PropertyChanged}" />
                         <TextBlock
                             Grid.Column="3"
                             Margin="5,0,0,0"
