Added option to delete a program

--- a/irHub/Dialogs/ProgramDialog.xaml
+++ b/irHub/Dialogs/ProgramDialog.xaml
@@ -15,7 +15,9 @@
     x:Class="irHub.Dialogs.ProgramDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
     xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:mat="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Border CornerRadius="10">
@@ -249,6 +251,18 @@
                 VerticalAlignment="Top"
                 Width="22"
                 hc:IconElement.Geometry="{StaticResource ErrorGeometry}" />
+            <Button
+                Background="Transparent"
+                BorderThickness="0"
+                Click="DeleteButton_OnClick"
+                Height="28"
+                HorizontalAlignment="Right"
+                Margin="0,0,5,6"
+                Padding="0"
+                VerticalAlignment="Bottom"
+                Width="28">
+                <mat:MaterialIcon Foreground="{DynamicResource DarkDangerBrush}" Kind="DeleteForever" />
+            </Button>
         </Grid>
     </Border>
 </hc:Window>
