Added a check to the save button to only show when there are actual changes

--- a/irHub/Dialogs/ProgramDialog.xaml
+++ b/irHub/Dialogs/ProgramDialog.xaml
@@ -2,6 +2,7 @@
     Background="{DynamicResource RegionBrush}"
     BorderThickness="0"
     Height="360"
+    Loaded="ProgramDialog_OnLoaded"
     ResizeMode="NoResize"
     ShowCloseButton="False"
     ShowIcon="False"
@@ -242,6 +243,7 @@
                 HorizontalAlignment="Right"
                 IsDefault="True"
                 Margin="0,4,30,0"
+                Name="SaveButton"
                 Padding="0"
                 Style="{StaticResource ButtonIcon}"
                 VerticalAlignment="Top"
